Bug 157667 - EDITING Cycle case with change tracking loses text highlight on more than a word
Summary: EDITING Cycle case with change tracking loses text highlight on more than a word
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0
Keywords:
Depends on: 141198
Blocks: Track-Changes
  Show dependency treegraph
 
Reported: 2023-10-09 14:42 UTC by László Németh
Modified: 2023-11-07 06:24 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description László Németh 2023-10-09 14:42:05 UTC
Description:
Only last word of a selected sentence or other multi-word text gets cycle case with change tracking

Steps to Reproduce:
1. enable change tracking
2. select multi-word text
3. press shift-F3 three times to cycle case

Actual Results:
cycle case only on the last word of the selected text

Expected Results:
cycle case on all words of the selected text


Reproducible: Always


User Profile Reset: No

Additional Info:
See Bug 141198
Comment 1 Commit Notification 2023-10-31 22:07:19 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4cf8de89bad9143a5b2dd3d6351080bf62b76029

tdf#157667 sw track changes: fix cycle case on multiple words

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.