tdf#157667 sw track changes: fix cycle case on multiple words

Fix tracked cycle case on multiple selected words.

Follow up to commit dc748d7dbd114fbf663752258dbaf003af2926c3
"tdf#141198 sw: fix cycle case with change tracking" and
commit 79435eb55ef226fb0e3507aabdc2f8af062680f6
"tdf#157988 sw track changes: fix cycle case on a selected word".

Change-Id: I81566f8be0cf6f4af6ed4af031116bd19e3884d7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/158732
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>